--- a/app/diwi/trunk/client/web/test/route-map.html
+++ b/app/diwi/trunk/client/web/test/route-map.html
@@ -9,9 +9,9 @@
 		<!--
 		var lon = 4.80;
 		var lat = 52.35;
-		var x = 118000;
-		var y = 480000;
-		var zoom = 7;
+		var x = 155500;
+		var y = 462500;
+		var zoom = 6;
 		var map, layer1,layer2,layer3,layer4,layer5,layer6;
 
 		function init() {
@@ -31,30 +31,32 @@
 			//map.addLayer(layer1);
 
 			// PostGIS routes projected on topo-map
-			var wmsURL='http://88.198.19.182/cgi-bin/mapserv?map=/var/keyworx/webapps/mapserver/topnl/topnl.map';
+			var wmsURL='http://test.digitalewichelroede.nl/map';
 			var sld='http://88.198.19.182/mapserver/topnl/select-route.sld';
-			layer1 = new OpenLayers.Layer.WMS.Untiled( "Amstelveen Single Route",
-					  wmsURL, {layers: 'amstelveen,routes', sld: sld} );
+
+			layer1 = new OpenLayers.Layer.WMS.Untiled( "Geese - Diwi Routes",
+					  wmsURL, {layers: 'topnl_geese,all_diwi_routes'} );
 			map.addLayer(layer1);
 
-			layer2 = new OpenLayers.Layer.WMS.Untiled( "Amstelveen All Routes",
-					  wmsURL, {layers: 'amstelveen,routes'} );
+			layer2 = new OpenLayers.Layer.WMS.Untiled( "Geese - Single Diwi Route",
+					  wmsURL, {layers: 'topnl_geese,single_diwi_route', id: '117'} );
 			map.addLayer(layer2);
 
-			layer3 = new OpenLayers.Layer.WMS.Untiled( "Geese - Diwi Routes",
-					  wmsURL, {layers: 'topnl,all_diwiroutes'} );
-			// map.addLayer(layer3);
+			layer3 = new OpenLayers.Layer.WMS.Untiled( "TopNL Raster - Single Skeeler Route",
+					  wmsURL, {layers: 'topnl_raster,single_skeeler_route', id: '17'} );
+			map.addLayer(layer3);
 
-			layer4 = new OpenLayers.Layer.WMS.Untiled( "Geese - Single Diwi Route",
-					  wmsURL, {layers: 'topnl,single_diwiroute', id:'117'} );
+			layer4 = new OpenLayers.Layer.WMS.Untiled( "TopNL Raster - All Skeeler Routes",
+					  wmsURL, {layers: 'topnl_raster,all_skeeler_routes'} );
 			map.addLayer(layer4);
+
 
 			layer5 = new OpenLayers.Layer.WMS.Untiled( "Single Route Only",
 					  wmsURL, {layers: 'routes', sld: sld} );
 			map.addLayer(layer5);
 
 			layer6 = new OpenLayers.Layer.WMS.Untiled( "All Routes Only",
-					  wmsURL, {layers: 'routes'} );
+					  wmsURL, {layers: 'all_skeeler_routes'} );
 			map.addLayer(layer6);
 
 
