--- a/app/diwi/trunk/client/web/test/index.html
+++ b/app/diwi/trunk/client/web/test/index.html
@@ -24,6 +24,10 @@ Several tests/try outs for DIWI web client.
 		<td><a href="kwclient-login.html">kwclient-login.html</a></td>
 		<td>KWClient Login voorbeeld</td>
 	</tr>
+	<tr>
+		<td><a href="kwclient-diwi.html">kwclient-diwi.html</a></td>
+		<td>Test KWClientDIWI calls</td>
+	</tr>
 </table>
 </body>
 
